# diffsl

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Cargo.toml  GetLLVMLibs.cmake  README.md  build.rs  functions.html  index.html  inputs_outputs.html  introduction.html  language.html  llms.txt  odes.html  operations.html  post_autodiff_optimisation.ll  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-15440fbd.js  searchindex-1fc93d26.js  searchindex-40b3c83f.js  searchindex-5f4161ac.js  searchindex-87f2ae87.js  searchindex-89eca9b2.js  searchindex-9216d466.js  searchindex-b43fc8b6.js  searchindex-b9047057.js  searchindex-d12b1b69.js  searchindex-e97ea9e3.js  searchindex.js  searchindex.json  tensors.html  toc-545c49d9.js  toc-89b6c819.js  toc-e1e43fd6.js  toc-edacbe1f.js  toc.html  toc.js  (+1 more)
.github/workflows/: ci.yml
benches/: evaluation.rs
book/: book.toml
book/src/: SUMMARY.md  functions.md  inputs_outputs.md  introduction.md  language.md  llms.txt  odes.md  operations.md  tensors.md
diffsl/: Cargo.toml  build.rs
diffsl-backend/: Cargo.toml
diffsl-backend/src/: main.rs
diffsl-wasm/: Cargo.toml
diffsl-wasm/src/: exports.rs  imports.rs  lib.rs  module.rs
diffsl/benches/: evaluation.rs  pybamm_dfn.diffsl  pybamm_dfn.rs
diffsl/examples/: logistic.ds
diffsl/src/: lib.rs
diffsl/src/ast/: mod.rs
diffsl/src/continuous/: builder.rs  mod.rs
diffsl/src/discretise/: discrete_model.rs  env.rs  error.rs  layout.rs  mod.rs  shape.rs  sparse_import.rs  tensor.rs
diffsl/src/enzyme/: mod.rs
diffsl/src/execution/: compiler.rs  data_layout.rs  external_interface.rs  functions.rs  interface.rs  mod.rs  module.rs  relocations.rs  scalar.rs  translation.rs  wasm.rs
diffsl/src/execution/cranelift/: codegen.rs
diffsl/src/execution/external_dynamic/: loader.rs  mod.rs
diffsl/src/execution/llvm/: codegen.rs
diffsl/src/execution/object/: mod.rs
diffsl/src/parser/: ds_grammar.pest  ds_parser.rs  mod.rs  ms_grammar.pest  ms_parser.rs  test_discrete.ms  test_fishers.ms
diffsl/tests/: external_dynamic_f32.rs  external_dynamic_f64.rs  external_dynamic_missing_symbol.rs  external_f32.rs  external_f64.rs  llvm_dynamic_roundtrip.rs  pybamm_dfn.rs  roundtrips.rs  wasm.rs
diffsl/tests/fixtures/external_dynamic_fixture_f32/: Cargo.toml
diffsl/tests/fixtures/external_dynamic_fixture_f32/src/: lib.rs
diffsl/tests/fixtures/external_dynamic_fixture_f64/: Cargo.toml
diffsl/tests/fixtures/external_dynamic_fixture_f64/src/: lib.rs
diffsl/tests/fixtures/external_dynamic_fixture_missing_rhs/: Cargo.toml
diffsl/tests/fixtures/external_dynamic_fixture_missing_rhs/src/: lib.rs
diffsl/tests/support/: external_dynamic_test_macros.rs  external_test_macros.rs
examples/: heat2d.ds  logistic.cs  logistic.ds
src/: ast.rs  build.rs  builder.rs  codegen.rs  discretise.rs  ds_grammar.pest  ds_parser.rs  error.rs  lib.rs  mmt_grammar.pest  ms_grammar.pest  ms_parser.rs  parser.rs  semantic.rs  test.mmt  test_circuit.mmt  test_circuit.ms  test_discrete.ms  test_fishers.mmt  test_fishers.ms  test_pk.mmt  utils.rs
src/ast/: ast.rs  mod.rs
src/codegen/: codegen.rs  compiler.rs  data_layout.rs  mod.rs  object_code.rs  sundials.rs  translation.rs
src/continuous/: builder.rs  mod.rs  other.rs
src/discretise/: discrete_model.rs  discretise.rs  env.rs  error.rs  layout.rs  mod.rs  shape.rs  tensor.rs
src/enzyme/: mod.rs  typetree.rs  wrapper.h
src/execution/: codegen.rs  compiler.rs  data_layout.rs  functions.rs  interface.rs  mod.rs  module.rs  relocations.rs  serialize.rs  sundials.rs  translation.rs
src/execution/cranelift/: codegen.rs  compiler.rs
src/execution/llvm/: codegen.rs  compiler.rs  mod.rs
src/execution/mmap/: mod.rs  wasm.rs
src/execution/object/: mod.rs
src/parser/: ds_grammar.pest  ds_parser.rs  mod.rs  ms_parser.rs  test_discrete.ms  test_pk.ms
