[package]
name = "diffsl"
version = "0.4.1"
edition = "2021"
description = "A compiler for a domain-specific language for ordinary differential equations (ODE)."
license-file = "LICENSE.txt"
exclude = ["Enzyme/enzyme/benchmarks"]
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
repository = "https://github.com/martinjrobins/diffsl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]
llvm15-0 = ["inkwell-150", "llvm-sys-150", "llvm", "enzyme"]
llvm16-0 = ["inkwell-160", "llvm-sys-160", "llvm", "enzyme"]
llvm17-0 = ["inkwell-170", "llvm-sys-170", "llvm", "enzyme"]
llvm18-0 = ["inkwell-180", "llvm-sys-180", "llvm", "enzyme"]
enzyme = ["bindgen", "cmake"]
llvm = []
test_compile = []
rayon = ["dep:rayon"]

[dependencies]
ndarray = { version = "=0.16.1" } 
anyhow = "1.0.95"
approx = "0.5"
pest = "2.7.15"
pest_derive = "2.7.15"
itertools = "0.14.0"
uid = "0.1.8"
inkwell-150 = { package = "inkwell", version = ">=0.5.0", features = ["llvm15-0"], optional = true }
inkwell-160 = { package = "inkwell", version = ">=0.5.0", features = ["llvm16-0"], optional = true }
inkwell-170 = { package = "inkwell", version = ">=0.5.0", features = ["llvm17-0"], optional = true }
inkwell-180 = { package = "inkwell", version = ">=0.5.0", features = ["llvm18-0"], optional = true }
llvm-sys-150 = { package = "llvm-sys", version = "150.0.3", optional = true }
llvm-sys-160 = { package = "llvm-sys", version = "160.1.0", optional = true }
llvm-sys-170 = { package = "llvm-sys", version = "170.0.1", optional = true }
llvm-sys-180 = { package = "llvm-sys", version = "180.0.0", optional = true }
inkwell_internals = { version = "0.10.0", optional = true }
cranelift = "0.115.1"
cranelift-module = "0.115.1"
cranelift-jit = "0.115.1"
cranelift-native = "0.115.1"
target-lexicon = "0.13.1"
aliasable = "0.1.3"
rayon = { version="1.10.0", optional = true }
lazy_static = "1.5.0"

[build-dependencies]
bindgen = { version = "0.71.1", optional = true }
cmake = { version = "0.1.52", optional = true }

[dev-dependencies]
divan = "0.1.17"
env_logger = "0.11.6"

[[bench]]
name = "evaluation"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[package.metadata.docs.rs]
features = ["llvm15-0"]
