[workspace]
members = [
  "diffsl",
]
exclude = [
  "book",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
repository = "https://github.com/martinjrobins/diffsl"

[workspace.dependencies]


[profile.profiling]
inherits = "release"
debug = true