[workspace]
members = [
  "diffsl",
]
default-members = [
  "diffsl",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
repository = "https://github.com/martinjrobins/diffsl"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
debug = true

[profile.release]
opt-level = 3
debug = false

