[package]
name = "diffsl-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true

[features]
llvm15-0 = ["diffsl/llvm15-0"]
llvm16-0 = ["diffsl/llvm16-0"]
llvm17-0 = ["diffsl/llvm17-0"]
llvm18-1 = ["diffsl/llvm18-1"]

[dependencies]
axum = "0.8.6"
diffsl = { path = "../diffsl", features = [] }
