[package]
name = "diffsl"
version = "0.5.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A compiler for a domain-specific language for ordinary differential equations (ODE)."
exclude = ["Enzyme/enzyme/benchmarks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
llvm15-0 = ["inkwell-150", "llvm-sys-150", "llvm", "enzyme"]
llvm16-0 = ["inkwell-160", "llvm-sys-160", "llvm", "enzyme"]
llvm17-0 = ["inkwell-170", "llvm-sys-170", "llvm", "enzyme"]
llvm18-1 = ["inkwell-181", "llvm-sys-181", "llvm", "enzyme"]
enzyme = ["bindgen", "cmake"]
llvm = []
cranelift = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-object", "dep:cranelift-jit", "dep:cranelift-native"]
test_compile = []
rayon = ["dep:rayon"]

[dependencies]
ndarray = { version = "=0.16.1" } 
anyhow = "1.0.98"
approx = "0.5"
pest = "2.8.0"
pest_derive = "2.8.0"
itertools = "0.14.0"
uid = "0.1.8"
inkwell-150 = { package = "inkwell", version = "0.6.0", features = ["llvm15-0"], optional = true }
inkwell-160 = { package = "inkwell", version = "0.6.0", features = ["llvm16-0"], optional = true }
inkwell-170 = { package = "inkwell", version = "0.6.0", features = ["llvm17-0"], optional = true }
inkwell-181 = { package = "inkwell", version = "0.6.0", features = ["llvm18-1"], optional = true }
llvm-sys-150 = { package = "llvm-sys", version = "150.2.1", optional = true }
llvm-sys-160 = { package = "llvm-sys", version = "160.2.1", optional = true }
llvm-sys-170 = { package = "llvm-sys", version = "170.2.0", optional = true }
llvm-sys-181 = { package = "llvm-sys", version = "181.2.0", optional = true }
inkwell_internals = { version = "0.11.0", optional = true }
cranelift = { version = "0.119.0", optional = true}
cranelift-module = { version = "0.119.0", optional = true}
cranelift-object = { version = "0.119.0", optional = true}
cranelift-jit = { version = "0.119.0", optional = true}
cranelift-native = { version = "0.119.0", optional = true}
target-lexicon = "0.13"
aliasable = "0.1.3"
rayon = { version="1.10.0", optional = true }
lazy_static = "1.5.0"
serde = "1.0.219"
object = "0.36.7"
libc = "0.2.172"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mmap-rs = "0.6.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_System_LibraryLoader",
]

[build-dependencies]
bindgen = { version = "0.71.1", optional = true }
cmake = { version = "0.1.54", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
divan = "0.1.21"
env_logger = "0.11.8"

[[bench]]
name = "evaluation"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[package.metadata.docs.rs]
features = ["llvm15-0"]
